src/components/details/details.css
.details{
    flex: 0.8;

    .user{
        padding: 30px 20px;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;
        border-bottom: 1px solid#dddddd35;

        img{
            width: 100px;
            height: 100px;
            border-radius: 50%;
            object-fit: cover;
            border: 2px solid white;
        }
    }

    .info{
        padding: 20px;
        display: flex;
        flex-direction: column;
        gap: 30px;
        height: 100vh;

        .option{

            .title{
                display: flex;
                align-items: center;
                justify-content: space-between;

                img{
                    width: 30px;
                    height: 30px;
                    background-color: rgba(17, 25, 40, 0.3);
                    padding: 10px;
                    border-radius: 50%;
                    cursor: pointer;
                }
            }

            .photos{
                display: flex;
                flex-direction: column;
                gap: 20px;
                margin-top: 20px;

                .photoItem{
                    display: flex;
                    align-items: center;
                    justify-content: space-between;

                    .photoDetail{
                        display: flex;
                        align-items: center;
                        gap: 20px;

                        img{
                            width: 40px;
                            height: 40px;
                            border-radius: 5px;
                            object-fit: cpver;
                        }

                        span{
                          font-size: 14px;
                          color: lightgray;
                          font-weight: 300;  
                        }
                    }

                    .icons{
                        width: 40px;
                        height: 40px;
                        background: rgba(17, 25, 40, 0.3);
                        padding: 10px;
                        border-radius: 50%;
                        cursor: pointer;
                    }
                }
            }
        }

        button{
            display: flex;
            justify-content: center; 
            align-items: center;
            padding: 10px 20px;
            background-color: rgba(230, 74, 105, 0.553);
            color: white;
            border: none;
            border-radius: 5px;
            cursor: pointer;
            position: relative;
            bottom: 22px;

            &:hover{
                background-color: rgba(220, 20, 60, 0.7);
            }
        }
    }
}

